downgrade gradle version

--- a/client/kotlin/app/src/main/res/drawable/bottom_btn_note_list.xml
+++ b/client/kotlin/app/src/main/res/drawable/bottom_btn_note_list.xml
@@ -3,7 +3,7 @@
     android:height="128dp"
     android:viewportWidth="1024"
     android:viewportHeight="1024">
-  <path
-      android:pathData="M914.9,158.4H183.5c-15.2,0 -27.6,-12.4 -27.6,-27.6v-4.1c0,-15.2 12.4,-27.6 27.6,-27.6h731.4c15.2,0 27.6,12.4 27.6,27.6v4.1c0.1,15.2 -12.3,27.6 -27.6,27.6zM914.9,819.9H183.5c-15.2,0 -27.6,-12.4 -27.6,-27.6v-4.1c0,-15.2 12.4,-27.6 27.6,-27.6h731.4c15.2,0 27.6,12.4 27.6,27.6v4.1c0.1,15.2 -12.3,27.6 -27.6,27.6zM574.7,489.2H176.6c-11.4,0 -20.7,-9.3 -20.7,-20.7v-18.1c0,-11.4 9.3,-20.7 20.7,-20.7h398.1c11.4,0 20.7,9.3 20.7,20.7v18.1c0,11.4 -9.3,20.7 -20.7,20.7z"
-      android:fillColor="#828282"/>
+    <path
+        android:fillColor="#828282"
+        android:pathData="M914.9,158.4H183.5c-15.2,0 -27.6,-12.4 -27.6,-27.6v-4.1c0,-15.2 12.4,-27.6 27.6,-27.6h731.4c15.2,0 27.6,12.4 27.6,27.6v4.1c0.1,15.2 -12.3,27.6 -27.6,27.6zM914.9,819.9H183.5c-15.2,0 -27.6,-12.4 -27.6,-27.6v-4.1c0,-15.2 12.4,-27.6 27.6,-27.6h731.4c15.2,0 27.6,12.4 27.6,27.6v4.1c0.1,15.2 -12.3,27.6 -27.6,27.6zM574.7,489.2H176.6c-11.4,0 -20.7,-9.3 -20.7,-20.7v-18.1c0,-11.4 9.3,-20.7 20.7,-20.7h398.1c11.4,0 20.7,9.3 20.7,20.7v18.1c0,11.4 -9.3,20.7 -20.7,20.7z" />
 </vector>
